# winvd-monitoring

./: .gitignore  Cargo.toml  README.md  deno-build-scss.ts  deno-build-typescript.ts  deno-dev-server.ts  deno.jsonc  tauri.conf.json
html/: index.css  index.html  index.scss  index.tsx  stats.css  stats.html  stats.scss  stats.tsx  useImmer.ts
src/: main.rs  powerevents.rs
ui/: Api.ts  IpcProtocol.ts  Lang.ts  MonitoringApp.test.ts  MonitoringApp.ts  ProjectMonitoringApp.test.ts  ProjectMonitoringApp.ts  ProjectMonitoringDb.test.ts  ProjectMonitoringDb.ts  ProjectMonitoringDb2.ts  RustBackend.ts  TimingDb.test.ts  TimingDb.ts  TimingDbCreator.ts  TimingRecorder.test.ts  TimingRecorder.ts  TotalsCache.ts
ui/components/: Dropdown.tsx  Stats.scss  Stats.tsx  Timings.scss  Timings.tsx
ui/utils/: Database.ts  DatabaseDeno.ts  DatabaseTauri.ts  DatabaseWasm.test.ts  DatabaseWasm.ts  TransactionalCache.test.ts  TransactionalCache.ts  asDefaultMap.ts  cancellablePromise.ts  classnames.ts  createUrlSignal.ts  formatDate.test.ts  formatDate.ts  memoize.bench.ts  memoize.test.ts  memoize.ts  memoizeDbCall.test.ts  memoizeDbCall.ts  memoizeTransaction.test.ts  memoizeTransaction.ts  minMaxValue.ts  reactionWithOldValue.ts  simpleMapEvent.ts  splitTotals.ts  sqlLiteral.test.ts  sqlLiteral.ts  sqlPlugin.ts
