[package]
name = "winvd-monitoring"
version = "0.1.0"
description = ""
authors = ["Jari O. O. Pennanen <ciantic@oksidi.com>"]
license = "MIT"
repository = ""
default-run = "winvd-monitoring"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [
    "devtools",
    "icon-ico",
    "icon-png",
    "system-tray",
    "window-all",
] }
winvd = "0.0.40"
raw-window-handle = "0.5"
windows = { version = "0.44", features = [
    # Find WinApi features with searching here https://microsoft.github.io/windows-docs-rs/

    # https://microsoft.github.io/windows-docs-rs/doc/windows/Win32/Graphics/Dwm/fn.DwmExtendFrameIntoClientArea.html
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Controls",

    "Win32_UI_WindowsAndMessaging", # for TranslateMessage etc.
    "Win32_System_LibraryLoader",   # for GetModuleHandle
    "Win32_Graphics_Gdi",           # for WNDCLASSA
    "Win32_System_Power",           # for RegisterPowerSettingNotification
    "Win32_System_SystemServices",  # GUID_POWERSCHEME_PERSONALITY

] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"
features = ["sqlite"]                                   # or "postgres", or "mysql"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
integration-tests = []
